Fixed some alignment problems

--- a/app/assets/stylesheets/components/_searchbar.scss
+++ b/app/assets/stylesheets/components/_searchbar.scss
@@ -23,3 +23,7 @@
   outline: none !important;
   background-color: white;
 }
+
+.search-result-count {
+  font-weight: bold;
+}
